apps/base/echoserver/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echoserver
spec:
  hosts:
    - "*"
    #- echoserver.local
  gateways:
    - istio-ingress/istio-ingress-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: "echoserver.echoserver.svc.cluster.local"
        port:
          number: 8080
